syntax = "proto3";

package flight;

option go_package = "./proto";

service DataNodeService {
  rpc Gossip(GossipRequest) returns (GossipResponse);
  rpc Write(WriteRequest) returns (WriteResponse);
  rpc Read(ReadRequest) returns (ReadResponse);
}

message WriteRequest {
  string flight_id = 1;
  string status = 2;
}

message WriteResponse {
  bool success = 1;
  string node_id = 2;
  VectorClock clock = 3;
}

message ReadRequest {
  string flight_id = 1;
}

message ReadResponse {
  FlightState state = 1;
}

message VectorClock {
  map<string, int32> versions = 1;
}

message FlightState {
  string status = 1;
  VectorClock clock = 2;
}

message GossipRequest {
  string flight_id = 1;
  FlightState state = 2;
  string sender_id = 3;
}

message GossipResponse {
  bool success = 1;
}
